aya-parser/src/parser/instructions/snapshots/aya_parser__parser__instructions__sub__tests__sub_lit_reg.snap
---
source: aya-parser/src/parser/instructions/sub.rs
expression: result
---
Instruction(
    SubLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 9,
                end: 13,
            },
        ),
    ),
)
