aya-parser/src/parser/instructions/snapshots/aya_parser__parser__instructions__sub__tests__sub_reg_reg.snap
---
source: aya-parser/src/parser/instructions/sub.rs
expression: result
---
Instruction(
    SubRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
